@startuml
interface EstadoTerreno{
+ocuparPorEdificio(edificio)
+ocuparPorUnidad(unidad)
+energizarTerreno()
+desenergizarTerreno()
+cubrirTerrenoDeMoho()
toData():ObjectNode
toDataOcupante():ObjectNode
}
abstract Terreno{
-coordenada:Coordenada
-edificio:Edificio
-unidad:Unidad
-visivilidad:Visivilidad
-zanganoOcupante:Zangano
+establecerEdificio(edificio)
+establecerUnidad(unidad)
+compararCoordenadas(coordenada):bool
{abstract}+ocuparPorEdificio(edificio)
{abstract}+ocuparPorUnidad(unidad)
+verificarTerrenoSinEdificio()
+verificarTerrenoSinUnidad()
+eliminarEdificio()
+eliminarUnidad()
+energizarTerreno()
+desenergizarTerreno()
+cubrirTerrenoDeMoho
+recibirDanio(danioTerrestre,danioAereo)
+cambiarVisibilidadActual(visibilidad)
+establecerVisibilidadAUnidad(unidad)
-establecerZanganoOcupante(Zangano)
-eliminarZanganoOcupante()
-verificarZanganoOcupante()
+extraerGasVespeno(recursoRequerido:Recurso)
+extraerMinerales(mineral:Mineral)
{abstract}toData():ObjectNode
{abstract}toDataOcupante():ObjectNode
}
class TerrenoVacio{
-terreno:TerrenoBase
+TerrenoVacio(terreno)
}

class TerrenoMoho{
-terreno:TerrenoBase
+TerrenoMoho(terreno)
}
class TerrenoVolcan{
-gasVespeno:Recurso
+TerrenoVolcan(coordenada)
+ocuparPorEdificio(edificio)
+ocuparPorUnidad(unidad)
+extraerGasVespeno(recursoRequerido:Recurso)
toData():ObjectNode
toDataOcupante():ObjectNode
}



class TerrenoEnergizado{
-terreno:TerrenoBase
+TerrenoEnergizado(terreno)
}

class TerrenoMIneral{
-mineral:Recurso
+TerrenoMIneral(coordenada)
+ocuparPorEdificio(edificio)
+ocuparPorUnidad(unidad)
+extraerMinerales(mineral:Mineral)
toData():ObjectNode
toDataOcupante():ObjectNode
}
class TerrenoAereo{
+TerrenoAereo(coordenada)
+ocuparPorEdificio(edificio)
+ocuparPorUnidad(unidad)
toData():ObjectNode
toDataOcupante():ObjectNode
}
Terreno -up-> Coordenada
Terreno -left-> Visivilidad
Terreno -up-> Zangano
Terreno -up-> Edificio
Terreno -up-> Unidad

Terreno <|- TerrenoBase
Terreno <|--- TerrenoMIneral
Terreno <|-- TerrenoVolcan
Terreno <|-- TerrenoAereo
TerrenoBase --> EstadoTerreno
EstadoTerreno <|.. TerrenoEnergizado
EstadoTerreno <|... TerrenoMoho
EstadoTerreno <|.. TerrenoVacio
@enduml